app.js configurations fixed

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,4 @@
 {
-  "*.js": [
-    "eslint"
-  ],
-  "**/*.+(js|json)": [
-    "prettier --write"
-  ]
+  "*.js": ["eslint"],
+  "**/*.+(js|json)": ["prettier --write"]
 }
