--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "postinstall": "husky install && husky add .husky/pre-commit \"yarn validate-staged\" && husky add .husky/pre-push \"yarn test\""
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^14.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.3.1",
+    "slugify": "^1.6.6",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
