--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 NODE_LOCAL_PORT=3000
 
-MONGODB_USER=admin
-MONGODB_PASSWORD=13SomeSecretPasswordNo1Nos13
-MONGODB_DATABASE=myblog
-DB_URL=mongodb://127.0.0.1:27017/blogs-db
+DB_URL=mongodb://127.0.0.1:27017/cigkoftes-db
+SESSION_SECRET=YMiMbaQl6IDMuKL8YtE7T61Y12KsaUoa13Jalay8daABHt6A
