--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_LOCAL_PORT=3000
 
-DB_URL=mongodb://127.0.0.1:27017/cigkoftes-db
+DB_URL=mongodb://localhost/cigkoftes-db
 SESSION_SECRET=YMiMbaQl6IDMuKL8YtE7T61Y12KsaUoa13Jalay8daABHt6A
