--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "slugify": "^1.6.6",
     "yarn-upgrade-all": "^0.6.1"
