--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
+    "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
     "yarn-upgrade-all": "^0.6.1"
   },
