--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
