--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
+    "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
