--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon src/app.js",
-    "test": "yarn validate && jest --passWithNoTests",
+    "test": "jest --runInBand --detectOpenHandles",
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
     "validate": "yarn format && yarn lint",
@@ -18,7 +18,6 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^14.2.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
@@ -27,11 +26,13 @@
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yarn-upgrade-all": "^0.6.1"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "^8.7.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-node": "^4.1.0",
@@ -44,7 +45,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
-    "jest": "^27.4.7",
+    "jest": "^27.5.1",
+    "supertest": "^6.1.6",
     "lint-staged": "^12.3.1",
     "nodemon": "^2.0.15",
     "prettier": "2.8.8"
