--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
     "email-validator": "^2.0.4",
@@ -27,6 +28,7 @@
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
     "slugify": "^1.6.6",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yarn-upgrade-all": "^0.6.1"
