--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "lint-staged": "^12.3.1",
     "nodemon": "^2.0.15",
     "prettier": "2.8.8"
+  },
+  "jest": {
+    "testRegex": "((\\.|/)(test|spec))\\.[jt]sx?$"
   }
 }
