changed db config

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_LOCAL_PORT=3000
 
 DB_URL=mongodb://127.0.0.1:27017/cigkoftes-db
-SESSION_SECRET=YMiMbaQl6IDMuKL8YtE7T61Y12KsaUoa13Jalay8daABHt6A
+DB_URL_TEST=mongodb://localhost:27017/test_database
+
 
 ADMIN_MAIL=161815105320project@gmail.com
 ADMIN_PASSWORD=vulvdlfcysxmbxzc
