--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_LOCAL_PORT=3000
 
-DB_URL=mongodb://127.0.0.1:27017/cigkoftes-db
+DB_URL=mongodb+srv://cigkoftes_db:NKgZK7D6thtP99U8@cigkoftes.ndhbk7l.mongodb.net/?retryWrites=true&w=majority
 DB_URL_TEST=mongodb://localhost:27017/test_database
 
 
