--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 NODE_LOCAL_PORT=3000
 
-DB_URL=mongodb://127.0.0.1:27017/cigkoftes-db
-DB_URL_TEST=mongodb://localhost:27017/test_database
+DB_URL=mongodb+srv://saitbaradai:t9d0cyE9jQE6vqS8@cluster0.9hy7sbe.mongodb.net/
+DB_URL_TEST=mongodb://127.0.0.1:27017/cigkoftes-db-test
+
 
 
 ADMIN_MAIL=161815105320project@gmail.com
