--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.9",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "express-session": "^1.17.3",
@@ -46,10 +48,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
     "jest": "^27.5.1",
-    "supertest": "^6.1.6",
     "lint-staged": "^12.3.1",
     "nodemon": "^2.0.15",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "supertest": "^6.1.6"
   },
   "jest": {
     "testRegex": "((\\.|/)(test|spec))\\.[jt]sx?$"
