--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.9",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
