--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "fsevents": "2.3.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "email-validator": "^2.0.4",
@@ -53,5 +54,9 @@
   },
   "jest": {
     "testRegex": "((\\.|/)(test|spec))\\.[jt]sx?$"
+  },
+  "fsevents": {
+    "version": "2.3.2",
+    "platform": "darwin"
   }
 }
